crates/service/tests/completion/snapshots/features__completion__array__array.snap
---
source: crates/service/tests/completion/array.rs
expression: response
---
[
  {
    "label": "$a",
    "labelDetails": {
      "detail": "(struct)"
    },
    "kind": 8,
    "sortText": "1"
  },
  {
    "label": "1",
    "labelDetails": {
      "detail": "(array)"
    },
    "kind": 8,
    "sortText": "0"
  },
  {
    "label": "$b",
    "labelDetails": {
      "detail": "(array)"
    },
    "kind": 8,
    "sortText": "0"
  },
  {
    "label": "unreachable",
    "kind": 24
  },
  {
    "label": "nop",
    "kind": 24
  },
  {
    "label": "block",
    "kind": 24
  },
  {
    "label": "loop",
    "kind": 24
  },
  {
    "label": "if",
    "kind": 24
  },
  {
    "label": "else",
    "kind": 24
  },
  {
    "label": "throw",
    "kind": 24
  },
  {
    "label": "throw_ref",
    "kind": 24
  },
  {
    "label": "end",
    "kind": 24
  },
  {
    "label": "br",
    "kind": 24
  },
  {
    "label": "br_if",
    "kind": 24
  },
  {
    "label": "br_table",
    "kind": 24
  },
  {
    "label": "return",
    "kind": 24
  },
  {
    "label": "call",
    "kind": 24
  },
  {
    "label": "call_indirect",
    "kind": 24
  },
  {
    "label": "return_call",
    "kind": 24
  },
  {
    "label": "return_call_indirect",
    "kind": 24
  },
  {
    "label": "call_ref",
    "kind": 24
  },
  {
    "label": "return_call_ref",
    "kind": 24
  },
  {
    "label": "drop",
    "kind": 24
  },
  {
    "label": "select",
    "kind": 24
  },
  {
    "label": "try_table",
    "kind": 24
  },
  {
    "label": "local",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "global",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "table",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "i32",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "sortText": "0"
  },
  {
    "label": "i64",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "f32",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "f64",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "memory",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "ref",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "br_on_null",
    "kind": 24
  },
  {
    "label": "br_on_non_null",
    "kind": 24
  },
  {
    "label": "cont",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "suspend",
    "kind": 24
  },
  {
    "label": "resume",
    "kind": 24
  },
  {
    "label": "resume_throw",
    "kind": 24
  },
  {
    "label": "resume_throw_ref",
    "kind": 24
  },
  {
    "label": "switch",
    "kind": 24
  },
  {
    "label": "struct",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "array",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "br_on_cast",
    "kind": 24
  },
  {
    "label": "br_on_cast_fail",
    "kind": 24
  },
  {
    "label": "any",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "extern",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "i31",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "data",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "elem",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "v128",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "i8x16",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "i16x8",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "i32x4",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "i64x2",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "f32x4",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "f64x2",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  },
  {
    "label": "atomic",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24
  }
]
