crates/service/tests/completion/snapshots/features__completion__array__array_following_int_idx.snap
---
source: crates/service/tests/completion/array.rs
expression: response
---
[
  {
    "label": "$a",
    "labelDetails": {
      "detail": "(struct)"
    },
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 14
        },
        "end": {
          "line": 6,
          "character": 15
        }
      },
      "newText": "$a"
    }
  },
  {
    "label": "1",
    "labelDetails": {
      "detail": "(array)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 14
        },
        "end": {
          "line": 6,
          "character": 15
        }
      },
      "newText": "1"
    }
  },
  {
    "label": "$b",
    "labelDetails": {
      "detail": "(array)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 14
        },
        "end": {
          "line": 6,
          "character": 15
        }
      },
      "newText": "$b"
    }
  }
]
