crates/service/tests/completion/snapshots/features__completion__array__array_init_data.snap
---
source: crates/service/tests/completion/array.rs
expression: response
---
[
  {
    "label": "$a",
    "labelDetails": {
      "detail": "(struct)"
    },
    "kind": 8,
    "sortText": "1"
  },
  {
    "label": "1",
    "labelDetails": {
      "detail": "(array)"
    },
    "kind": 8,
    "sortText": "0"
  },
  {
    "label": "$b",
    "labelDetails": {
      "detail": "(array)"
    },
    "kind": 8,
    "sortText": "0"
  }
]
